--- a/Backend/9.1+Authentication+Lv.1/package.json
+++ b/Backend/9.1+Authentication+Lv.1/package.json
@@ -14,6 +14,9 @@
     "body-parser": "^1.20.3",
     "ejs": "^3.1.10",
     "express": "^4.21.2",
-    "pg": "^8.13.3"
+    "pg": "^8.14.0"
+  },
+  "devDependencies": {
+    "nodemon": "^3.1.9"
   }
 }
